# Faerie-Engine

./: .gitattributes  .gitmodules  README.md  main.c  meson.build
buildscripts/: cd_then.cmd  copy_resources.cmd  rust_cxxbridge.cmd
pch/: client_pch.h  rust_bindings_pch.h
resources/: faerie_module_example.wasm  rust_module_example.wasm  rust_module_example_component_model.wasm  script.wasm
resources/models/: suzanne.fbx
resources/shaders/: frag.glsl  vert.glsl
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
scripts/: copy_assets.cmd
src/: imconfig_allegro5.h  main.cpp
src/client/: bridge.cpp  bridge.h  client_main.cpp  entity_wrapper.h  input_action.cpp  input_action.h  maths_types.h  test.cpp  test.h
src/client/components/: camera.cpp  camera.h  component_lifecycle.h  component_serialisation.h  hierarchy.cpp  hierarchy.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  sprite.h  transform.cpp  transform.h  uuid_comp.cpp  uuid_comp.h
src/client/pch/: client_pch.h
src/client/platform/: render_system_opengl3.cpp  render_system_opengl3.h
src/client/platform/wasmtime/: scripting_system_wasmtime.cpp  scripting_system_wasmtime.h
src/client/resources/: material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  resource_info.h  script.cpp  script.h  shader.cpp  shader.h  texture.cpp  texture.h
src/client/systems/: debug.cpp  debug.h  ecs.cpp  ecs.h  input.cpp  input.h  input_system.h  logger.cpp  logger.h  render_system.cpp  render_system.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  script_engine.cpp  script_engine.h  scripting_system.cpp  scripting_system.h  subsystem.h  system.cpp  system.h  system_lifecycle_declare.h  system_lifecycle_define.h  window.cpp  window.h  window_system.cpp  window_system.h
src/client/systems/impl/: input_system_impl_sdl2.cpp  input_system_impl_sdl2.h  render_system_impl_opengl3.cpp  render_system_impl_opengl3.h  scripting_system_impl_lua.cpp  scripting_system_impl_lua.h  scripting_system_impl_wasmtime.cpp  scripting_system_impl_wasmtime.h  window_system_impl_sdl2.cpp  window_system_impl_sdl2.h
src/client/systems/platform/: render_system_opengl3.cpp  render_system_opengl3.h  renderer_opengl3.cpp  renderer_opengl3.h  script_engine_wasmtime.cpp  script_engine_wasmtime.h
src/client/systems/platform/wasmtime/: scripting_system_wasmtime.cpp  scripting_system_wasmtime.h
src/client/util/: container_to_string.h  cxx_ergonomics.h  hash.h  json_archive.cpp  json_archive.h  locate_component.h  type_name.h
src/rust/: Cargo.toml  lib.rs
src/rust/src/: debug.rs  lib.rs
src/shaders/: frag.glsl  vert.glsl
src/wit/: module.wit  script-api.wit
subprojects/: cxx.wrap  foldhash-0.1-rs.wrap  link-cplusplus-1-rs.wrap  proc-macro2-1-rs.wrap  quote-1-rs.wrap  rustversion-1-rs.wrap  syn-2-rs.wrap  unicode-ident-1-rs.wrap  vfspp.wrap
subprojects/packagefiles/cxx/: meson.build  meson.options
